2006-03-31 10:15 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridRemoveTwoFaceCell) to fix a parallelization
	check and to increase simularity between gridRemoveTwoFaceCell and
	gridRemoveThreeFaceCell commonNodes and uncommonNodes are now
	local cell indexes and facenodes are correctly mapped to node ids.

2006-03-30  9:00 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridRemoveThreeFaceCell) to correctly reset
	facenodes before creating new face.

2006-03-30  8:43 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridRemoveThreeFaceCell) fixed the creatation of
	hanging nodes (nodes not connected to any cells) by removing
	common node after removing cell. The hanging node caused the
	adjoint to NaN on the second iteration and was detected by
	repartying the grid with seq party.

2006-03-30  8:30 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridRemoveTwoFaceCell) made the parallel checks
	more precise. improved comments

2006-03-29 10:22 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridRemoveThreeFaceCell) fixed the gem checks,
	reporting, and extraneous parallel checks.

2006-03-28 16:10 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridRemoveTwoFaceCell,gridRemoveThreeFaceCell)
	removed regardless of cost.
	* src/gridswap.c (gridRemoveThreeFaceCell) fixed logic that made
	sure all three faces are on same faceId.


2006-03-28 15:25 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.11 Release. Tagging at FUN3D interface change to
	add gridparallelpreproject_.

2006-03-28 15:00 Mike Park <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelAdapt,gridParallelSwap) extracted the
	pre projection check to gridParallelPreProject.
	* src/gridmpi.c (gridParallelPreProject) added to run all the
	checks before projection.
	* src/gridfortran.c (gridparallelpreproject_) added to allow
	FUN3D to call the preprojection checks cleanly.
	
2006-03-28 13:35 Mike Park <mike.park@nasa.gov>
