@@ -1,3 +1,8 @@
+2006-03-31 15:50 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridswap.c (gridRemoveThreeFaceCell) to remove hanging ghost
+	nodes in the case that there are only one local node.
+
 2006-03-31 10:15 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridswap.c (gridRemoveTwoFaceCell) to fix a parallelization
